[project]
name = "bach-booking_com15"
version = "1.0.0"
description = "RapidAPI: DataCrawler/booking-com15"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=2.0.0",
    "httpx>=0.25.0",
]

[project.scripts]
bach_booking_com15 = "server:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
]

[project.urls]
Homepage = "https://github.com/bachstudio/bach-booking_com15"
Repository = "https://github.com/bachstudio/bach-booking_com15"
Documentation = "https://github.com/bachstudio/bach-booking_com15#readme"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.hatch.version]
path = "server.py"
pattern = '__version__ = "(?P<version>[^"]+)"'